syntax = "proto3";

package note;

import "definitions/validate/Validate.proto";
import "definitions/common/ShapeAnnotation.proto";

option go_package = "github.com/yb2020/odoc/proto/gen/go/note";

// @api_path: /api/note/noteShape/getList
// @method: POST
// @content-type: application/json
// @summary: 根据笔记ID获取笔记形状列表
message GetNoteShapesByNoteIdRequest {
  string noteId = 1 [(validate.rules).string = {min_len: 1}];
}

message GetNoteShapesByNoteIdResponse {
  repeated common.ShapeAnnotation list = 1;
}

/**
 * @api_path: /api/note/noteShape/save
 * @method: POST
 * @content-type: application/json
 * @summary: 保存笔记形状
 */
message SaveShapeRequest {
  string noteId = 1;
  common.ShapeAnnotation shapeAnnotation = 2;
}

message SaveShapeResponse {
  string shapeId = 1;
}

/**
 * @api_path: /api/note/noteShape/update
 * @method: POST
 * @content-type: application/json
 * @summary: 更新笔记形状
 */
message UpdateShapeRequest {
  repeated common.ShapeAnnotation annotations = 1;
}

/**
 * @api_path: /api/note/noteShape/delete
 * @method: POST
 * @content-type: application/json
 * @summary: 删除笔记形状
 */
message DeleteShapeRequest {
  repeated string shapeIds = 1;
}
